5sem/IFJ/IFJ-Project/tests/syntax_errors/test_syntax_double_minus.wren
import "ifj25" for Ifj

// SYNTAX ERROR: Missing right operand
// Expected error: SYNTAX_ERROR (2)

class Program {
	static main() {
		var x
		x = 10 - -
	}
}

